[gd_scene load_steps=15 format=2]

[ext_resource path="res://levels/world.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy/enemy_espejo.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/level_tucas/player/player_tile.tscn" type="PackedScene" id=4]
[ext_resource path="res://pickables/tuca.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/level_tucas/level_mago/enemy_workd.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Action RPG Resources/UI/HeartUIFull.png" type="Texture" id=7]
[ext_resource path="res://levels/level_tucas/level_mago/level_world.gd" type="Script" id=8]
[ext_resource path="res://levels/level_tucas/level_mago/enemies.gd" type="Script" id=9]
[ext_resource path="res://levels/level_tucas/level_mago/tucas.gd" type="Script" id=10]
[ext_resource path="res://assets/environment/layers/NewSuperMarioBros2-World1-1.png" type="Texture" id=11]
[ext_resource path="res://levels/level_tucas/level_mago/enemy_mago_1.tscn" type="PackedScene" id=12]
[ext_resource path="res://pickables/coin.tscn" type="PackedScene" id=13]
[ext_resource path="res://HUD/winLoseHandler.tscn" type="PackedScene" id=15]

[node name="level_world" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 8 )

[node name="World" parent="." instance=ExtResource( 1 )]
collision_use_kinematic = true
tile_data = PoolIntArray( -2818048, 2, 3, -2817985, 2, 3, -2752512, 2, 65539, -2752449, 2, 65539, -2686976, 2, 65539, -2686913, 2, 65539, -2621440, 2, 65539, -2621377, 2, 65539, -2555904, 2, 65539, -2555841, 2, 65539, -2490368, 2, 65539, -2490305, 2, 65539, -2424832, 2, 65539, -2424769, 2, 65539, -2359296, 2, 65539, -2359233, 2, 65539, -2293760, 2, 65539, -2293697, 2, 65539, -2228224, 2, 65539, -2228161, 2, 65539, -2162688, 2, 65539, -2162625, 2, 65539, -2097152, 2, 65539, -2097089, 2, 65539, -2031616, 2, 65539, -2031553, 2, 65539, -1966080, 2, 65539, -1966017, 2, 65539, -1900544, 2, 65539, -1900481, 2, 65539, -1835008, 2, 65539, -1834945, 2, 65539, -1769472, 2, 65539, -1769409, 2, 65539, -1703936, 2, 65539, -1703873, 2, 65539, -1638400, 2, 65539, -1638337, 2, 65539, -1572864, 2, 65539, -1572801, 2, 65539, -1507328, 2, 65539, -1507265, 2, 65539, -1441792, 2, 65539, -1441729, 2, 65539, -1376256, 2, 65539, -1376193, 2, 65539, -1310720, 2, 65539, -1310657, 2, 65539, -1245184, 2, 65539, -1245121, 2, 65539, -1179648, 2, 65539, -1179585, 2, 65539, -1114112, 2, 65539, -1114049, 2, 65539, -1048576, 2, 65539, -1048513, 2, 65539, -983040, 2, 65539, -982977, 2, 65539, -917504, 2, 65539, -917441, 2, 65539, -851968, 2, 65539, -851905, 2, 65539, -786432, 2, 65539, -786369, 2, 65539, -720896, 2, 65539, -720833, 2, 65539, -655360, 2, 65539, -655297, 2, 65539, -589824, 2, 65539, -589761, 2, 65539, -524288, 2, 65539, -524225, 2, 65539, -458752, 2, 65539, -458689, 2, 65539, -393216, 2, 65539, -393153, 2, 65539, -327680, 2, 65539, -327617, 2, 65539, -262144, 2, 65539, -262081, 2, 65539, -196608, 2, 65539, -196545, 2, 65539, -131072, 2, 65539, -131009, 2, 65539, -65536, 2, 65539, -65473, 2, 65539, 0, 2, 65539, 63, 2, 65539, 65536, 2, 65539, 65599, 2, 65539, 131072, 2, 65539, 131135, 2, 65539, 196608, 2, 65539, 196671, 2, 65539, 262144, 2, 65539, 262207, 2, 65539, 327680, 2, 65539, 327695, 2, 196608, 327696, 2, 196609, 327697, 2, 196609, 327698, 2, 196610, 327732, 2, 196608, 327733, 2, 196609, 327734, 2, 196609, 327735, 2, 196610, 327743, 2, 65539, 393216, 2, 65539, 393279, 2, 65539, 458752, 2, 65539, 458814, 2, 0, 458815, 2, 131079, 524288, 2, 65539, 524311, 2, 196608, 524312, 2, 196610, 524330, 2, 196608, 524331, 2, 196610, 524349, 2, 4, 524350, 2, 196614, 524351, 2, 65543, 589824, 2, 65539, 589884, 2, 4, 589885, 2, 196615, 589887, 2, 65539, 655360, 2, 65539, 655371, 2, 196608, 655372, 2, 196610, 655419, 2, 4, 655420, 2, 196615, 655423, 2, 65539, 720896, 2, 65539, 720954, 2, 196608, 720955, 2, 196615, 720959, 2, 65539, 786432, 2, 65539, 786495, 2, 65539, 851968, 2, 262148, 851969, 2, 196610, 851976, 2, 196608, 851977, 2, 196610, 852020, 2, 196608, 852021, 2, 196610, 852031, 2, 65539, 917504, 2, 65539, 917506, 2, 196611, 917523, 2, 196608, 917524, 2, 196610, 917547, 2, 196608, 917548, 2, 196610, 917567, 2, 65539, 983040, 2, 65539, 983043, 2, 196611, 983067, 2, 196611, 983077, 2, 196611, 983103, 2, 65539, 1048576, 2, 65539, 1048580, 2, 196611, 1048587, 2, 196608, 1048588, 2, 196610, 1048631, 2, 196608, 1048632, 2, 196610, 1048639, 2, 65539, 1114112, 2, 65539, 1114117, 2, 196611, 1114129, 2, 196608, 1114130, 2, 196610, 1114156, 2, 196608, 1114157, 2, 196610, 1114175, 2, 65539, 1179648, 2, 65539, 1179654, 2, 196611, 1179711, 2, 65539, 1310468, 2, 196611, 1245184, 2, 65539, 1245191, 2, 196611, 1245247, 2, 65539, 1310720, 2, 65539, 1310728, 2, 196608, 1310729, 2, 196609, 1310730, 2, 196609, 1310731, 2, 196609, 1310732, 2, 196610, 1310740, 2, 196608, 1310741, 2, 196610, 1310763, 2, 196608, 1310764, 2, 196610, 1310772, 2, 196608, 1310773, 2, 196609, 1310774, 2, 196609, 1310775, 2, 196609, 1310776, 2, 196610, 1310783, 2, 65539, 1376256, 2, 65539, 1376319, 2, 65539, 1441792, 2, 65539, 1441855, 2, 65539, 1572624, 2, 0, 1572625, 2, 2, 1507328, 2, 65539, 1507333, 2, 196608, 1507334, 2, 196610, 1507346, 2, 196608, 1507347, 2, 196610, 1507372, 2, 196608, 1507373, 2, 196610, 1507387, 2, 196608, 1507388, 2, 196610, 1507391, 2, 65539, 1638149, 2, 196608, 1638150, 2, 196609, 1638151, 2, 196609, 1638152, 2, 196609, 1638153, 2, 196609, 1638154, 2, 196609, 1638155, 2, 196609, 1638156, 2, 196609, 1638157, 2, 196609, 1638158, 2, 196609, 1638159, 2, 196609, 1638160, 2, 196614, 1638161, 2, 131074, 1572864, 2, 65539, 1572927, 2, 65539, 1638400, 2, 65539, 1638463, 2, 65539, 1703936, 2, 65539, 1703939, 2, 196608, 1703940, 2, 196610, 1703992, 2, 196608, 1703993, 2, 196610, 1703999, 2, 65539, 1769472, 2, 65539, 1769489, 2, 196608, 1769490, 2, 196609, 1769491, 2, 196609, 1769492, 2, 196609, 1769493, 2, 196610, 1769502, 2, 196608, 1769503, 2, 196609, 1769504, 2, 196609, 1769505, 2, 196609, 1769506, 2, 196610, 1769514, 2, 196608, 1769515, 2, 196609, 1769516, 2, 196609, 1769517, 2, 196609, 1769518, 2, 196610, 1769535, 2, 65539, 1835008, 2, 65539, 1835071, 2, 65539, 1900544, 2, 65539, 1900549, 2, 196608, 1900550, 2, 196610, 1900603, 2, 196608, 1900604, 2, 196610, 1900607, 2, 65539, 1966080, 2, 65539, 1966092, 2, 196608, 1966093, 2, 196609, 1966094, 2, 196610, 1966143, 2, 65539, 2031616, 2, 65539, 2031679, 2, 65539, 2097152, 2, 65539, 2097215, 2, 65539, 2162688, 2, 65539, 2162693, 2, 196608, 2162694, 2, 196609, 2162695, 2, 196609, 2162696, 2, 196609, 2162697, 2, 196609, 2162698, 2, 196609, 2162699, 2, 196610, 2162714, 2, 196608, 2162715, 2, 196609, 2162716, 2, 196609, 2162717, 2, 196609, 2162718, 2, 196609, 2162719, 2, 196609, 2162720, 2, 196609, 2162721, 2, 196609, 2162722, 2, 196609, 2162723, 2, 196609, 2162724, 2, 196610, 2162739, 2, 196608, 2162740, 2, 196609, 2162741, 2, 196609, 2162742, 2, 196609, 2162743, 2, 196609, 2162744, 2, 196609, 2162745, 2, 196609, 2162746, 2, 196610, 2162751, 2, 65539, 2228224, 2, 65539, 2228287, 2, 131075, 2293760, 2, 65539, 2359296, 2, 65539, 2359312, 2, 196608, 2359313, 2, 196609, 2359314, 2, 196609, 2359315, 2, 196610, 2359339, 2, 196608, 2359340, 2, 196609, 2359341, 2, 196609, 2359342, 2, 196610, 2424832, 2, 65539, 2490368, 2, 65539, 2621167, 2, 196608, 2621168, 2, 196609, 2621169, 2, 196609, 2621170, 2, 196609, 2621171, 2, 196609, 2621172, 2, 196609, 2621173, 2, 196610, 2621416, 2, 196608, 2621417, 2, 196609, 2621418, 2, 196609, 2621419, 2, 196609, 2621420, 2, 196609, 2621421, 2, 196609, 2621422, 2, 196609, 2621423, 2, 196609, 2621424, 2, 196609, 2621425, 2, 196609, 2621426, 2, 196609, 2621427, 2, 196609, 2621428, 2, 196609, 2621429, 2, 196609, 2621430, 2, 196609, 2621431, 2, 196609, 2621432, 2, 196609, 2621433, 2, 196609, 2621434, 2, 196609, 2621435, 2, 196609, 2621436, 2, 196609, 2621437, 2, 196609, 2621438, 2, 196609, 2621439, 2, 196609, 2555904, 2, 196615, 2555909, 2, 196608, 2555910, 2, 196609, 2555911, 2, 196609, 2555912, 2, 196609, 2555913, 2, 196609, 2555914, 2, 196609, 2555915, 2, 196610, 2555930, 2, 196608, 2555931, 2, 196609, 2555932, 2, 196609, 2555933, 2, 196609, 2555934, 2, 196609, 2555935, 2, 196609, 2555936, 2, 196609, 2555937, 2, 196609, 2555938, 2, 196609, 2555939, 2, 196609, 2555940, 2, 196610, 2555955, 2, 196608, 2555956, 2, 196609, 2555957, 2, 196609, 2555958, 2, 196609, 2555959, 2, 196609, 2555960, 2, 196609, 2555961, 2, 196609, 2555962, 2, 196610, 2686686, 2, 196608, 2686687, 2, 196609, 2686688, 2, 196609, 2686689, 2, 196609, 2686690, 2, 196609, 2686691, 2, 196610, 2686883, 2, 196608, 2686884, 2, 196609, 2686885, 2, 196609, 2686886, 2, 196609, 2686887, 2, 196610, 2686905, 2, 196608, 2686906, 2, 196609, 2686907, 2, 196609, 2686908, 2, 196609, 2686909, 2, 196610, 2752200, 2, 196608, 2752201, 2, 8, 2752202, 2, 196609, 2752203, 2, 196609, 2752204, 2, 196609, 2752205, 2, 196609, 2752206, 2, 196609, 2752207, 2, 196609, 2752208, 2, 196609, 2752209, 2, 196609, 2752210, 2, 196610, 2752231, 2, 0, 2752232, 2, 1, 2752233, 2, 1, 2752234, 2, 2, 2752295, 2, 196608, 2752296, 2, 196609, 2752297, 2, 196609, 2752298, 2, 196609, 2752299, 2, 196610, 2752311, 2, 196608, 2752312, 2, 196609, 2752313, 2, 196609, 2752314, 2, 196609, 2752315, 2, 196609, 2752316, 2, 196609, 2752317, 2, 196609, 2752318, 2, 196609, 2752319, 2, 196609, 2752320, 2, 196609, 2752321, 2, 196609, 2752322, 2, 196609, 2752323, 2, 196609, 2752324, 2, 196609, 2752325, 2, 196609, 2752326, 2, 196609, 2752327, 2, 196609, 2752328, 2, 196609, 2752329, 2, 196609, 2752330, 2, 196609, 2752331, 2, 196609, 2752332, 2, 196610, 2752359, 2, 196608, 2752360, 2, 196609, 2752361, 2, 196609, 2752362, 2, 196609, 2752363, 2, 196610, 2752375, 2, 196608, 2752376, 2, 196609, 2752377, 2, 196609, 2752378, 2, 196609, 2752379, 2, 196610, 2752426, 2, 196608, 2752427, 2, 196610, 2752474, 2, 196608, 2752475, 2, 196609, 2752476, 2, 196609, 2752477, 2, 196609, 2752478, 2, 196609, 2752479, 2, 196609, 2752480, 2, 196610, 2817737, 2, 65539, 2817767, 2, 131072, 2817768, 2, 131073, 2817769, 2, 131073, 2817770, 2, 131074, 2817920, 2, 4, 2817921, 2, 196609, 2817922, 2, 196609, 2817923, 2, 196609, 2817924, 2, 196609, 2817925, 2, 196609, 2817926, 2, 196609, 2817927, 2, 196609, 2817928, 2, 196609, 2817929, 2, 196609, 2817930, 2, 196609, 2817931, 2, 196609, 2817932, 2, 196609, 2817933, 2, 196609, 2817934, 2, 196609, 2817935, 2, 196609, 2817936, 2, 196609, 2817937, 2, 196609, 2817938, 2, 196609, 2817939, 2, 196609, 2817940, 2, 196609, 2817941, 2, 196609, 2817942, 2, 7, 2752591, 2, 196608, 2752592, 2, 196609, 2752593, 2, 196609, 2752594, 2, 196609, 2752595, 2, 196609, 2752596, 2, 196609, 2752597, 2, 196609, 2752598, 2, 196610, 2883273, 2, 65539, 2883287, 2, 196608, 2883288, 2, 196609, 2883289, 2, 196610, 2883376, 2, 196608, 2883377, 2, 196610, 2883440, 2, 196608, 2883441, 2, 196610, 2883453, 2, 196608, 2883454, 2, 196609, 2883455, 2, 196609, 2883456, 2, 196615, 2883478, 2, 196612, 2883479, 2, 196609, 2883480, 2, 196609, 2883481, 2, 196609, 2883482, 2, 196609, 2883483, 2, 196610, 2883505, 2, 196608, 2883506, 2, 196610, 2818052, 2, 4, 2818053, 2, 196609, 2818054, 2, 196609, 2818055, 2, 196609, 2818056, 2, 196609, 2818057, 2, 196609, 2818058, 2, 196609, 2818059, 2, 196609, 2818060, 2, 196609, 2818061, 2, 196609, 2818062, 2, 196609, 2818063, 2, 196609, 2818064, 2, 196609, 2818065, 2, 196609, 2818066, 2, 196609, 2818067, 2, 196609, 2818068, 2, 196609, 2818069, 2, 196609, 2818070, 2, 196609, 2818071, 2, 196609, 2818072, 2, 196609, 2818073, 2, 196609, 2818074, 2, 196609, 2818075, 2, 196609, 2818076, 2, 196609, 2818077, 2, 196609, 2818078, 2, 196609, 2818079, 2, 196609, 2818080, 2, 196609, 2818081, 2, 196609, 2818082, 2, 196609, 2818083, 2, 196609, 2818084, 2, 196609, 2818085, 2, 196609, 2818086, 2, 196609, 2818087, 2, 196609, 2818088, 2, 196609, 2818089, 2, 196609, 2818090, 2, 196609, 2818091, 2, 196609, 2818092, 2, 196609, 2818093, 2, 196609, 2818094, 2, 196609, 2818095, 2, 196609, 2818096, 2, 196609, 2818097, 2, 196609, 2818098, 2, 196609, 2818099, 2, 196609, 2818100, 2, 196609, 2818101, 2, 196609, 2818102, 2, 196609, 2818103, 2, 196609, 2818104, 2, 196609, 2818105, 2, 196609, 2818106, 2, 196609, 2818107, 2, 196609, 2818108, 2, 196609, 2818109, 2, 196609, 2818110, 2, 196609, 2818111, 2, 196609, 2818112, 2, 196609, 2818113, 2, 196609, 2818114, 2, 196609, 2818115, 2, 196609, 2818116, 2, 196609, 2818117, 2, 196609, 2818118, 2, 196609, 2818119, 2, 196609, 2818120, 2, 196609, 2818121, 2, 196609, 2818122, 2, 196609, 2818123, 2, 196609, 2818124, 2, 196609, 2818125, 2, 196609, 2818126, 2, 196610, 2948757, 2, 196608, 2948758, 2, 196609, 2948759, 2, 196609, 2948760, 2, 196609, 2948761, 2, 196609, 2948762, 2, 196609, 2948763, 2, 196609, 2948764, 2, 196609, 2948765, 2, 196609, 2948766, 2, 196609, 2948767, 2, 196609, 2948768, 2, 196609, 2948769, 2, 196609, 2948770, 2, 196609, 2948771, 2, 196609, 2948772, 2, 196609, 2948773, 2, 196609, 2948774, 2, 196609, 2948775, 2, 196609, 2948776, 2, 196609, 2948777, 2, 196609, 2948778, 2, 196609, 2948779, 2, 196609, 2948780, 2, 196609, 2948781, 2, 196609, 2948782, 2, 196609, 2948783, 2, 196609, 2948784, 2, 196609, 2948785, 2, 196609, 2948786, 2, 196609, 2948787, 2, 196609, 2948788, 2, 196609, 2948789, 2, 196609, 2948790, 2, 196609, 2948791, 2, 196609, 2948792, 2, 196609, 2948793, 2, 196609, 2948794, 2, 196609, 2948795, 2, 196609, 2948796, 2, 196609, 2948797, 2, 196609, 2948798, 2, 196609, 2948799, 2, 196609, 2948800, 2, 196609, 2948801, 2, 196609, 2948802, 2, 196609, 2948803, 2, 196609, 2948804, 2, 196609, 2948805, 2, 196609, 2948806, 2, 196609, 2948807, 2, 196609, 2948808, 2, 196609, 2948809, 2, 196615, 2948854, 2, 196608, 2948855, 2, 196609, 2948856, 2, 196609, 2948857, 2, 196609, 2948858, 2, 196609, 2948859, 2, 196609, 2948860, 2, 196609, 2948861, 2, 196609, 2948862, 2, 196609, 2948863, 2, 196609, 2948864, 2, 196609, 2948865, 2, 196609, 2948866, 2, 196609, 2948867, 2, 196609, 2948868, 2, 196609, 2948869, 2, 196609, 2948870, 2, 196609, 2948871, 2, 196609, 2948872, 2, 196609, 2948873, 2, 196609, 2948874, 2, 196609, 2948875, 2, 196609, 2948876, 2, 196609, 2948877, 2, 196609, 2948878, 2, 196609, 2948879, 2, 196609, 2948880, 2, 196609, 2948881, 2, 196609, 2948882, 2, 196609, 2948883, 2, 196609, 2948884, 2, 196609, 2948885, 2, 196610, 2948888, 2, 196608, 2948889, 2, 196609, 2948890, 2, 196609, 2948891, 2, 196609, 2948892, 2, 196609, 2948893, 2, 196609, 2948894, 2, 196609, 2948895, 2, 196609, 2948896, 2, 196609, 2948897, 2, 196609, 2948898, 2, 196609, 2948899, 2, 196609, 2948900, 2, 196609, 2948901, 2, 196609, 2948902, 2, 196609, 2948903, 2, 196610, 2948939, 2, 196608, 2948940, 2, 196609, 2948941, 2, 196609, 2948942, 2, 196609, 2948943, 2, 196609, 2948944, 2, 196609, 2948945, 2, 196609, 2948946, 2, 196609, 2948947, 2, 196609, 2948948, 2, 196609, 2948949, 2, 196609, 2948950, 2, 196609, 2948951, 2, 196609, 2948952, 2, 196609, 2948953, 2, 196609, 2948954, 2, 196609, 2948955, 2, 196609, 2948956, 2, 196609, 2948957, 2, 196609, 2948958, 2, 196609, 2948959, 2, 196609, 2948960, 2, 196609, 2948961, 2, 196609, 2948962, 2, 196609, 2948963, 2, 196609, 2948964, 2, 196609, 2948965, 2, 196609, 2948966, 2, 196610, 2949020, 2, 196608, 2949021, 2, 196609, 2949022, 2, 196609, 2949023, 2, 196609, 2949024, 2, 196610, 2949057, 2, 196608, 2949058, 2, 196609, 2949059, 2, 196609, 2949060, 2, 196609, 2949061, 2, 196609, 2949062, 2, 196609, 2949063, 2, 196609, 2949064, 2, 196609, 2949065, 2, 196609, 2949066, 2, 196609, 2949067, 2, 196609, 2949068, 2, 196609, 2949069, 2, 196609, 2949070, 2, 196609, 2949071, 2, 196609, 2949072, 2, 196609, 2949073, 2, 196609, 2949074, 2, 196609, 2949075, 2, 196609, 2949076, 2, 196609, 2949077, 2, 196609, 2949078, 2, 196609, 2949079, 2, 196609, 2949080, 2, 196609, 2949081, 2, 196610, 2949088, 2, 196608, 2949089, 2, 196609, 2949090, 2, 196609, 2949091, 2, 196609, 2949092, 2, 196609, 2949093, 2, 196609, 2949094, 2, 196609, 2949095, 2, 196609, 2949096, 2, 196609, 2949097, 2, 196609, 2949098, 2, 196609, 2949099, 2, 196609, 2949100, 2, 196609, 2949101, 2, 196609, 2949102, 2, 196609, 2949103, 2, 196609, 2949104, 2, 196609, 2949105, 2, 196609, 2949106, 2, 196609, 2949107, 2, 196609, 2949108, 2, 196609, 2949109, 2, 196609, 2949110, 2, 196609, 2949111, 2, 196609, 2949112, 2, 196609, 2949113, 2, 196609, 2949114, 2, 196609, 2949115, 2, 196609, 2949116, 2, 196609, 2949117, 2, 196609, 2949118, 2, 196609, 2949119, 2, 196609, 2883584, 2, 196609, 2883585, 2, 196609, 2883586, 2, 196609, 2883587, 2, 196609, 2883588, 2, 196615 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Control" parent="HUD" index="0"]
visible = false

[node name="enemies" type="YSort" parent="."]
script = ExtResource( 9 )

[node name="enemy_espejo9" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 168.014, 264.357 )

[node name="enemy_espejo" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 168.014, 264.357 )

[node name="enemy_espejo2" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 168.014, 264.357 )

[node name="enemy_espejo3" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 168.014, 264.357 )

[node name="enemy_espejo4" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 168.014, 264.357 )

[node name="enemy_espejo8" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 286.935, 625.876 )

[node name="enemy_espejo5" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 860.132, 21.7588 )

[node name="enemy_espejo6" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 270.286, 19.3803 )

[node name="enemy_espejo7" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 848.24, 471.279 )

[node name="enemy_espejo10" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 872.025, 261.979 )

[node name="enemy_espejo11" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 707.914, 369.007 )

[node name="enemy_espejo12" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 308.34, 369.007 )

[node name="enemy_espejo13" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 153.744, 471.279 )

[node name="enemy_espejo14" parent="enemies" instance=ExtResource( 3 )]
position = Vector2( 719.806, 628.254 )

[node name="tucas" type="YSort" parent="."]
script = ExtResource( 10 )

[node name="tuca" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 357.615, 659.069 )

[node name="tuca2" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 397.665, 658.703 )

[node name="tuca3" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 436.865, 658.703 )

[node name="tuca4" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 565.06, 658.703 )

[node name="tuca5" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 602.141, 658.703 )

[node name="tuca6" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 638.163, 657.643 )

[node name="tuca7" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 853.234, 581.362 )

[node name="tuca8" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 898.791, 581.362 )

[node name="tuca9" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 110.278, 583.473 )

[node name="tuca10" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 155.533, 582.059 )

[node name="tuca11" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 400.198, 404.523 )

[node name="tuca12" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 416.815, 404.678 )

[node name="tuca13" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 432.47, 404.868 )

[node name="tuca14" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 400.027, 390.694 )

[node name="tuca15" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 415.776, 390.694 )

[node name="tuca16" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 432.155, 390.694 )

[node name="tuca17" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 595.721, 407.523 )

[node name="tuca20" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 611.359, 392.973 )

[node name="tuca21" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 596.125, 393.157 )

[node name="tuca18" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 611.413, 407.725 )

[node name="tuca19" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 626.55, 407.725 )

[node name="tuca22" parent="tucas" instance=ExtResource( 5 )]
position = Vector2( 625.706, 392.683 )

[node name="monedas" type="YSort" parent="."]

[node name="coin" parent="monedas" instance=ExtResource( 13 )]
position = Vector2( -5387.52, 683.808 )

[node name="coin2" parent="monedas" instance=ExtResource( 13 )]
position = Vector2( -5341.06, 683.983 )

[node name="coin3" parent="monedas" instance=ExtResource( 13 )]
position = Vector2( -5299.68, 682.648 )

[node name="coin4" parent="monedas" instance=ExtResource( 13 )]
position = Vector2( -5255.63, 681.313 )

[node name="player_tile" parent="." instance=ExtResource( 4 )]
position = Vector2( 492.727, 599.23 )
collision_layer = 4
jump_speed = -350
gravity = 750

[node name="Camera2D" type="Camera2D" parent="player_tile"]
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="player_tile"]

[node name="player_start_pos" type="Position2D" parent="."]
position = Vector2( -5754.88, 650.564 )

[node name="enemy_world" parent="." instance=ExtResource( 6 )]
position = Vector2( 524.982, 19.4054 )

[node name="enemy_start_pos" type="Position2D" parent="."]
position = Vector2( 99.2924, 80.5018 )

[node name="enemyStats" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="enemyStats"]
anchor_left = 0.03
anchor_top = 0.928
anchor_right = 1.0
anchor_bottom = 0.928
margin_left = 0.279999
margin_top = -20.28
margin_right = -48.0
margin_bottom = -0.280029
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeRect" type="TextureRect" parent="enemyStats/Control"]
anchor_right = 1.0
margin_left = 1.49829
margin_top = 5.99323
margin_right = 1.49829
margin_bottom = 16.9932
texture = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewSuperMarioBros2-World1-1" type="Sprite" parent="."]
visible = false
position = Vector2( -2902.11, 636.947 )
texture = ExtResource( 11 )

[node name="enemy_mago_1" parent="." instance=ExtResource( 12 )]
position = Vector2( -5555.12, 675.743 )

[node name="winLoseHandler" parent="." instance=ExtResource( 15 )]

[connection signal="tree_exited" from="." to="." method="_on_level_world_tree_exited"]
[connection signal="die" from="player_tile" to="winLoseHandler" method="_on_player_tile_die"]
[connection signal="life_changed" from="player_tile" to="HUD" method="_on_player_tile_life_changed"]
[connection signal="die" from="enemy_world" to="winLoseHandler" method="_on_enemy_world_die"]

[editable path="HUD"]
[editable path="player_tile"]
